--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,7 +2,8 @@ pandoc: 2.16.1
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  DataProtection: DataProtection.html
   PortfolioTrackerDocs: PortfolioTrackerDocs.html
   Return: Return.html
-last_built: 2021-11-18T12:29Z
+last_built: 2021-11-18T15:51Z
 
