--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Depends:
     R (>= 4.1.0)
 Encoding: UTF-8
 LazyData: true
-URL: https://github.com/lorenzbr/PortfolioTrackerDocs
+URL: https://github.com/lorenzbr/PortfolioTrackerDocs,
+    https://www.lorenz-brachtendorf.com/PortfolioTrackerDocs/
 BugReports: https://github.com/lorenzbr/PortfolioTrackerDocs/issues
 Suggests: 
     knitr,
